--- a/frontend/css.css
+++ b/frontend/css.css
@@ -1,9 +1,9 @@
 
-#blogPost {
+/*#blogPost {
 
 	border: 2px solid black;
 	
-}
+}*/
 
 body {
 	background-color: #00CED1;
@@ -14,10 +14,22 @@ body {
 	height: 30px;
 }
 
-
 #text2 {
 	width: 1530px;
 	height: 300px;
 }
 
+h1, {
+	padding:0 5px;
+	border-top: 2px solid black;
+	border-left: 2px solid black;
+	border-right: 2px solid black;
+}
 
+p {
+	border-bottom: 2px solid black;
+}
+
+h1, h3, h4{
+	display: inline;
+}
